--- a/packages/nextjs/styles/custom.css
+++ b/packages/nextjs/styles/custom.css
@@ -95,6 +95,105 @@
   transition-delay: 0.3s;
 }
 
+
+.btn-success {
+  width: 200px;
+  position: relative;
+}
+
+.btn-success a {
+  height: 100%;
+  color: #000;
+  text-decoration: none;
+  font-size: 1em;
+  font-family: sans-serif;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 60px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  z-index: 1;
+  font-weight: 400;
+  letter-spacing: 1px;
+  overflow: hidden;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+  position: relative;
+  backdrop-filter: blur(15px);
+}
+
+.btn-success a {
+  letter-spacing: 3px;
+}
+
+.btn-success a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
+  transform: skewX(45deg) translateX(0%);
+  transition: 0.3s;
+}
+
+.btn-success:hover a::before {
+  transform: skewX(45deg) translateX(200%);
+}
+
+.btn-success::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  width: 60px;
+  height: 10px;
+  transform: translateX(-50%);
+  background: #a4fe13;
+  border-radius: 10px;
+  transition: 0.3s;
+  transition-delay: 0s;
+  box-shadow: 0 0 5px #a4fe13, 0 0 15px #a4fe13, 0 0 30px #a4fe13,
+    0 0 60px #a4fe13;
+}
+
+.btn-success::before {
+  bottom: 0;
+  height: 50%;
+  width: 80%;
+  border-radius: 30px;
+  transition-delay: 0.3s;
+}
+
+.btn-success::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -5px;
+  width: 60px;
+  height: 10px;
+  transform: translateX(-50%);
+  background: #a4fe13;
+  border-radius: 10px;
+  transition: 0.3s;
+  transition-delay: 0s;
+  box-shadow: 0 0 5px #a4fe13, 0 0 15px #a4fe13, 0 0 30px #a4fe13,
+    0 0 60px #a4fe13;
+}
+
+.btn-success::after {
+  top: 0;
+  height: 50%;
+  width: 80%;
+  border-radius: 30px;
+  transition-delay: 0.3s;
+}
+
+
 .loader {
   position: relative;
   width: 150px;
