--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=VT323&display=swap');
+
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
@@ -11,6 +12,7 @@
 
 body {
   min-height: 100vh;
+  padding: 20px;
 }
 
 h1,
