chore(wip): custom button style

--- a/packages/nextjs/styles/custom.css
+++ b/packages/nextjs/styles/custom.css
@@ -1,14 +1,17 @@
 .btn-cool {
-  width: 200px;
+  /* width: 200px; */
+  min-width: 150px;
   position: relative;
 }
 
 .btn-cool a {
+  padding: 6px 12px;
   height: 100%;
   color: #ffffff;
   text-decoration: none;
-  font-size: 1em;
-  font-family: sans-serif;
+  line-height: 1.25rem;
+  font-size: 0.875rem;
+  font-family: 'IBM Plex Sans', sans-serif;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 60px;
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
@@ -16,7 +19,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   z-index: 1;
   font-weight: 400;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
   overflow: hidden;
   text-align: center;
   display: flex;
@@ -27,9 +30,9 @@
   backdrop-filter: blur(15px);
 }
 
-.btn-cool a {
+/* .btn-cool a {
   letter-spacing: 3px;
-}
+} */
 
 .btn-cool a::before {
   content: "";
@@ -38,13 +41,13 @@
   left: 0;
   width: 50%;
   height: 100%;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
-  transform: skewX(45deg) translateX(0%);
+  background: linear-gradient(to left, rgba(224, 254, 0, 0.3), transparent);
+  transform: skewX(-45deg) translateX(0%);
   transition: 0.3s;
 }
 
 .btn-cool:hover a::before {
-  transform: skewX(45deg) translateX(200%);
+  transform: skewX(-45deg) translateX(200%);
 }
 
 .btn-cool::before {
@@ -55,12 +58,12 @@
   width: 60px;
   height: 10px;
   transform: translateX(-50%);
-  background: #9333EA;
+  background: #000000;
   border-radius: 10px;
   transition: 0.3s;
   transition-delay: 0s;
-  box-shadow: 0 0 5px #9333EA, 0 0 15px #9333EA, 0 0 30px #9333EA,
-    0 0 60px #9333EA;
+  box-shadow: 0 0 5px #DFFE00, 0 0 15px #DFFE00, 0 0 30px #DFFE00,
+    0 0 60px #DFFE00;
 }
 
 .btn-cool::before {
@@ -79,12 +82,12 @@
   width: 60px;
   height: 10px;
   transform: translateX(-50%);
-  background: #9333EA;
+  background: #000000;
   border-radius: 10px;
   transition: 0.3s;
   transition-delay: 0s;
-  box-shadow: 0 0 5px #9333EA, 0 0 15px #9333EA, 0 0 30px #9333EA,
-    0 0 60px #9333EA;
+  /* box-shadow: 0 0 5px #DFFE00, 0 0 15px #DFFE00, 0 0 30px #DFFE00,
+    0 0 60px #DFFE00; */
 }
 
 .btn-cool::after {
