--- a/packages/nextjs/styles/carousel-didactic-content.module.css
+++ b/packages/nextjs/styles/carousel-didactic-content.module.css
@@ -35,3 +35,20 @@
     width: 80%;
     height: 80%;
 }
+
+.itemMenu {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 500px;
+    border-width: 1px;
+    border-radius: 20px;
+    text-align: -webkit-center;
+    animation: pulsate 1.5s infinite alternate;  
+    box-shadow: 0 0 .2rem #fff,
+              0 0 .2rem #fff,
+              0 0 2rem #a4fe13,
+              0 0 0.8rem #a4fe13,
+              0 0 2.8rem #a4fe13,
+              inset 0 0 1.3rem #a4fe13; 
+}
