--- a/packages/nextjs/styles/swiper-slide-content.module.css
+++ b/packages/nextjs/styles/swiper-slide-content.module.css
@@ -4,11 +4,27 @@
     border-width: 1px;
     border-radius: 20px;
     text-align: -webkit-center;
-    animation: pulsate 1.5s infinite alternate;  
+    animation: pulsate 1.5s infinite alternate;
+    box-shadow: 0 0 .1rem #fff,
+        0 0 .2rem #fff,
+        0 0 1rem #DFFE00,
+        0 0 0.4rem #DFFE00,
+        0 0 1.4rem #DFFE00,
+        inset 0 0 0.6rem #DFFE00;
+}
+
+
+.achievement {
+    background-position: center;
+    background-size: cover;
+    border-width: 1px;
+    border-radius: 20px;
+    text-align: -webkit-center;
+    animation: pulsate 1.5s infinite alternate;
     box-shadow: 0 0 .2rem #fff,
-              0 0 .2rem #fff,
-              0 0 2rem #9333EA,
-              0 0 0.8rem #9333EA,
-              0 0 2.8rem #9333EA,
-              inset 0 0 1.3rem #9333EA; 
+        0 0 .2rem #fff,
+        0 0 2rem #9333EA,
+        0 0 0.8rem #9333EA,
+        0 0 2.8rem #9333EA,
+        inset 0 0 1.3rem #9333EA;
 }
